[package]
name = "ttp"
version = "0.1.0"
authors = [ "Viktor D. <dudnik.0x76@gmail.com>" ]
description = "Parses telegram mobile .attheme file to readable colors"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
regex = "1.6.0"
